switch to kramdown for markdown compilation

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ name: Machinekit
 highlighter: pygments
 relative_permalinks: false
 permalink: /blog/:year/:month/:day/:title/
+markdown: kramdown
 repository: https://github.com/machinekit/machinekit
