js: added scripts to create bundle with browserify

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Protobuf definitions to communicate with Machinetalk",
   "main": "js/index.js",
   "scripts": {
-    "prepublish": "js/scripts/install.js"
+      "prepublish": "js/scripts/install.js",
+      "bundle": "js/scripts/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
   "dependencies": {
     "mkdirp": "0.5.1",
     "protobufjs": "5.0.0"
+  },
+  "devDependencies": {
+    "browserify": "^13.0.0",
+    "minifyify": "^7.1.0"
   }
 }
