_config.yml: change highlighter to prevent github jekyll warnings

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Machinekit
-highlighter: pygments
+highlighter: rouge
 relative_permalinks: false
 permalink: /blog/:year/:month/:day/:title/
 markdown: kramdown
