_config.yml: exclude staging, scripts directories
we import artefacts (manpage source) here
a make job will move them to docs/man/man9 only if they changed so
the build is faster in common cases (no manpage changes)

Signed-off-by: Michael Haberler <git@mah.priv.at>

--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,5 @@ defaults:
       docs-dir: "docs"
       edit-repo-branch: "https://github.com/mhaberler/machinekit-docs/edit/clean-jekyll-1/"
 
-
+# stage manpage sources here for comparison
+exclude:  [staging scripts]
