--- a/_config.yml
+++ b/_config.yml
@@ -35,14 +35,13 @@ defaults:
 
 
 # stage manpage sources here for comparison
-exclude:
-  - staging
-  - scripts
-  - docs/man/man1/*.1
-  - docs/man/man1/*.1.in
-  - docs/man/man3/*.3hal
-  - docs/man/man3/*.3rtapi
-  - docs/man/man9/*.9
+exclude: [staging,
+	 scripts,
+	 'docs/man/man1/*.1',
+	 'docs/man/man1/*.1.in',
+	 'docs/man/man3/*.3hal',
+	 'docs/man/man3/*.3rtapi',
+	 'docs/man/man9/*.9' ]
 
 # Google services - preview.machinekit.io
 google_analytics:   UA-48383649-2
