--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ defaults:
     scope:
       path: ""
     values:
-      edit-repo: "https://github.com/mhaberler/machinekit-docs/"
-      edit-branch: "clean-jekyll-1"
+      edit-repo: "https://github.com/machinekit/machinekit-docs/"
+      edit-branch: "master"
   -
     scope:
 # applies to all files under:
