New CSE preparation
Remove old google search tag

Edit all absolute URLs to preview.machinekit.io, to machinekit.io

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ gems:
   - asciidoctor-diagram
   - jekyll-sitemap
 
-url: http://preview.machinekit.io
+url: http://machinekit.io
 
 asciidoc: asciidoctor
 asciidoc_ext: asciidoc,ad
