_config.yml: remove url:

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ gems:
   - asciidoctor-diagram
   - jekyll-sitemap
 
-url: http://machinekit.io
+#url: http://machinekit.io
+baseurl: /
 
 asciidoc: asciidoctor
 asciidoc_ext: asciidoc,ad
