documenting: update index, links and examples

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -9,7 +9,7 @@
   docs:
     - index-integrator
     - index-developer
-    - documenting/documenting
+    - index-documenting
     - developing/develop-index
     
 - title: Manpages
