Add QtQuickVcp documentation to site docs
Add link in sidebar and developing indicies

Adapted from repo readme.md
Doubtless capable of polishing:)

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -12,6 +12,7 @@
     - index-developer
     - index-documenting
     - developing/develop-index
+    - developing/qtquickvcp
     
 - title: Manpages
   docs:
