infra: a first stab at repos & flows descriptions

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -3,7 +3,7 @@
     - site/about-this-site
     - index-getting-started
     - index-user
-    - index-HAL    
+    - index-HAL
     - getting-help
 
 - title: Developing
@@ -13,9 +13,14 @@
     - index-documenting
     - developing/develop-index
     - developing/qtquickvcp
-    
+
 - title: Manpages
   docs:
     - man/man1
     - man/man3
     - man/man9
+
+- title: Project Infrastructure
+  docs:
+    - infra/repositories
+
