ignoring directory files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ test/
 *.adoc
 *.*~
 .jekyll-metadata
+.directory
 docs/man/man1/index.asciidoc
 docs/man/man3/index.asciidoc
 docs/man/man9/index.asciidoc
