MAINTENANCE: Resolve 'set-env' issue in GitHub Actions
GitHub deprecated setting of environment variables in steps via the 'set-env' format and instead requires the ENVIRONMENT FILE format. This caused failures in the workflows.

More information in : https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/

Also remove sending of transmission password in payload.

--- a/.github/workflows/build-preview-pages.yaml
+++ b/.github/workflows/build-preview-pages.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Create output directory
         run: |
           mkdir ./${{ env.OUTPUT_NAME }}
-          echo ::set-env name=OUTPUT_DIRECTORY::$(pwd)/${{ env.OUTPUT_NAME }}
+          echo "OUTPUT_DIRECTORY=$(pwd)/${{ env.OUTPUT_NAME }}" >> "$GITHUB_ENV"
           echo "The output directory is ${{ env.OUTPUT_DIRECTORY }}"
           mkdir ./${{ env.OUTPUT_NAME }}/build      
 
